Revert "Fix drop down rtl options are left aligned (#1310)"
This reverts commit a8610fa31ab209bba98080151424372884d62642.

--- a/src/DropdownLayout/DropdownLayout.scss
+++ b/src/DropdownLayout/DropdownLayout.scss
@@ -141,7 +141,6 @@ a[data-hook=link-item] {
 
 :global(.rtl) .option {
   text-align: right;
-  direction: rtl;
   padding-right: 24px;
   padding-left: 24px;
 }
